--- a/sites/all/themes/unc/css/unc.css
+++ b/sites/all/themes/unc/css/unc.css
@@ -1,4 +1,31 @@
 
+/*HEADER*/
+.navbar{
+    height:211px;
+    background-color: #9fd2f1;
+    background-image: url("../images/logo_reforma.png") ;
+    background-size: 185px;
+    background-repeat: no-repeat;
+    background-position-x: 0;
+    background-position-y: 68px;
+    border-bottom-left-radius:0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius:0px;
+    border-top-right-radius: 0px;
+    border:0 solid #9fd2f1;
+}
+.logo{
+    padding: 0;
+    margin: 0;
+}
+.logo img{
+    width: 70px;
+    margin-left: 200px;
+    margin-top: 68px;
+}
+
+/*MENU*/
+
 #block-menu-menu-men-perfiles ul.menu.nav li{
     display:inline;
     float:left;
