editando CT banners, vistas y layout panels

--- a/sites/all/modules/panels_bootstrap_layouts/plugins/layouts/bootstrap_unc_home/panels-bootstrap-layouts-admin-unc.css
+++ b/sites/all/modules/panels_bootstrap_layouts/plugins/layouts/bootstrap_unc_home/panels-bootstrap-layouts-admin-unc.css
@@ -16,3 +16,6 @@
 .panels-dnd .bootstrap-unc-home #panel-region-novedades {width: 48.0%;}
 .panels-dnd .bootstrap-unc-home #panel-region-videos {width: 48.0%;}
 .panels-dnd .bootstrap-unc-home #panel-region-agenda {width: 98.0%;}
+
+.panels-dnd .bootstrap-unc-home #panel-region-servicios {width: 48.0%;}
+.panels-dnd .bootstrap-unc-home #panel-region-contacto {width: 48.0%;}
