agregando cambios en la BD y editando css tira-banners para que no tome los cambios en vista-servicios (banners)

--- a/sites/all/themes/unc/css/unc.css
+++ b/sites/all/themes/unc/css/unc.css
@@ -38,7 +38,7 @@
 
 /*VISTA TIRA DE BANNERS*/
 
-.view-vista-tira-banners {
+#tira-banners .view-vista-tira-banners {
     margin-right: 70px;
     margin-left: 40px;
 }
@@ -93,7 +93,7 @@
     margin-right: -70px;
 }
 
-.pane-vista-tira-banners {
+#tira-banners{
     height: 70px;
     margin-bottom: 60px;
 }
