editando vista servicios

--- a/sites/all/themes/unc/css/unc.css
+++ b/sites/all/themes/unc/css/unc.css
@@ -239,8 +239,8 @@ p.lead {
 /*vista servicios*/
 .panel-pane.pane-views.pane-vista-tira-banners.vista-servicios .views-field.views-field-field-banner{
     margin-bottom: 10px;
-    margin-right: 30px;
-    width: 265px;
+/*    margin-right: 30px;
+    width: 265px;*/
 }
 
 .panel-pane.pane-views.pane-vista-tira-banners.vista-servicios h2.pane-title{
