--- a/sites/all/themes/unc/css/unc.css
+++ b/sites/all/themes/unc/css/unc.css
@@ -525,7 +525,10 @@ width: 170px;
     
 }
 
-/* VISTA AMBIENTE INTERNACIONALES*/
+
+/*****************************************************/
+/********* VISTA AMBIENTE INTERNACIONALES ************/
+/*****************************************************/
 
 /*SLIDER NOTICIAS*/
 .page-node-21 .pane-vista-slider-noticias h2{
@@ -627,6 +630,365 @@ margin-top: 55px;
     margin-bottom: 30px;
 }
 
+.page-node-21 .field-content.unc-slider{
+background-color: rgba(116, 173, 225,0.8);
+background-image: url("../images/icono_titular.png");
+}
+
+.page-node-21 .field-content.unc-slider a {
+color: #FFFFFF;
+}
+
+
+/*FIN AMBIENTE*/
+
+
+/*****************************************************/
+/********* VISTA AMBIENTE VIDA ESTUDIANTIL ************/
+/*****************************************************/
+
+/*SLIDER NOTICIAS*/
+.page-node-18 .pane-vista-slider-noticias h2{
+background-image: url("../images/ambiente-vidaestudiantil-nombre.png");
+background-repeat: no-repeat;
+background-size: 352px 80px;
+text-indent: -9000px;
+height: 80px;
+background-position-x: 115px;
+margin-bottom: 15px;
+/*el color es #A41D34*/
+background-color: rgba(164, 29, 52, 0.15);
+background-position-y: 5px;
+}
+
+.page-node-18 .field-content.unc-slider{
+background-color: rgba(164, 29, 52,0.8);
+background-image: url("../images/icono_titular.png");
+}
+
+.page-node-18 .field-content.unc-slider a {
+color: #FFFFFF;
+}
+
+/*TIRA DE BANNERS*/
+.page-node-18 .pane-vista-tira-banners{
+margin-bottom: 50px;
+margin-top: 20px;
+}
+
+
+/*VISTA NOVEVDADES*/
+.page-node-18 .pane-vista-novedades h2{
+    background-image: url("../images/ambiente-vidaestudiantil-otrasnovedades.png");
+    background-repeat: no-repeat;
+    background-size: 284px 38px;
+    text-indent: -9000px;
+    height: 38px;
+    background-position-x: 100px;
+    margin-bottom: 30px;
+}
+
+.page-node-18 .view-id-vista_novedades ul {
+    padding-left: 0px;
+}
+
+.page-node-18 .view-id-vista_novedades li {
+    background-color: rgba(164, 29, 52,0.1);
+    list-style: none;
+    margin-bottom: 15px;
+    line-height: 50px;
+}
+
+.page-node-18 .view-id-vista_novedades li a {
+    vertical-align: middle;
+    margin-left: 10px;
+    color: #222222;
+}
+
+.page-node-18 .view-id-vista_novedades li:hover {
+    background-color: rgba(164, 29, 52,0.2);
+}
+
+.page-node-18 .view-id-vista_novedades li a:hover {
+    vertical-align: middle;
+    margin-left: 10px;
+    color: #a41d34;
+    text-decoration: none;
+}
+
+
+/*VISTA VIDEOS*/
+.page-node-18 .pane-vista-videos .view-id-vista_videos{
+    margin-top: 88px;
+}
+
+/* VISTA MULTIMEDIA*/
+.page-node-18 .pane-vista-multimedia-ambiente{
+margin-top: 55px;
+}
+
+
+/*VISTA AGENDA*/
+.page-node-18 .pane-vista-eventos{
+margin-top: 55px;
+}
+
+.page-node-18 .titulo-agenda:nth-child(odd) {
+    padding-top: 16px;
+    background-color: rgba(164, 29, 52,0.1);
+    padding-bottom: 16px;
+    margin-bottom: 10px;
+}
+
+/*VISTA CONTACTO*/
+.page-node-18 .pane-vista-contacto-ambiente{
+margin-top: 55px;
+}
+
+.page-node-18 .pane-vista-contacto-ambiente h2{
+    background-image: url("../images/ambiente-vidaestudiantil-contacto.png");
+    background-repeat: no-repeat;
+    background-size: 148px 38px;
+    text-indent: -9000px;
+    height: 38px;
+    background-position-x: 13px;
+    margin-bottom: 30px;
+}
+
+
+/*FIN AMBIENTE*/
+
+
+
+/*****************************************************/
+/********* VISTA AMBIENTE GESTION INSTITUCIONAL ************/
+/*****************************************************/
+
+/*SLIDER NOTICIAS*/
+.page-node-19 .pane-vista-slider-noticias h2{
+background-image: url("../images/gestion-institucional-nombre.png");
+background-repeat: no-repeat;
+background-size: 352px 80px;
+text-indent: -9000px;
+height: 80px;
+background-position-x: 115px;
+margin-bottom: 15px;
+/*el color es #3A612E*/
+background-color: rgba(58, 97, 46, 0.15);
+background-position-y: 5px;
+}
+
+.page-node-19 .field-content.unc-slider{
+background-color: rgba(164, 29, 52,0.8);
+background-image: url("../images/icono_titular.png");
+}
+
+.page-node-19 .field-content.unc-slider a {
+color: #FFFFFF;
+}
+
+/*TIRA DE BANNERS*/
+.page-node-19 .pane-vista-tira-banners{
+margin-bottom: 50px;
+margin-top: 20px;
+}
+
+
+/*VISTA NOVEVDADES*/
+.page-node-19 .pane-vista-novedades h2{
+    background-image: url("../images/gestion-novedades-legislativas.png");
+    background-repeat: no-repeat;
+    background-size: 284px 38px;
+    text-indent: -9000px;
+    height: 38px;
+    background-position-x: 100px;
+    margin-bottom: 30px;
+}
+
+.page-node-19 .view-id-vista_novedades ul {
+    padding-left: 0px;
+}
+
+.page-node-19 .view-id-vista_novedades li {
+    background-color: rgba(164, 29, 52,0.1);
+    list-style: none;
+    margin-bottom: 15px;
+    line-height: 50px;
+}
+
+.page-node-19 .view-id-vista_novedades li a {
+    vertical-align: middle;
+    margin-left: 10px;
+    color: #222222;
+}
+
+.page-node-19 .view-id-vista_novedades li:hover {
+    background-color: rgba(164, 29, 52,0.2);
+}
+
+.page-node-19 .view-id-vista_novedades li a:hover {
+    vertical-align: middle;
+    margin-left: 10px;
+    color: #3A612E;
+    text-decoration: none;
+}
+
+
+/*VISTA VIDEOS*/
+.page-node-19 .pane-vista-videos .view-id-vista_videos{
+    margin-top: 88px;
+}
+
+/* VISTA MULTIMEDIA*/
+.page-node-19 .pane-vista-multimedia-ambiente{
+margin-top: 55px;
+}
+
+
+/*VISTA AGENDA*/
+.page-node-19 .pane-vista-eventos{
+margin-top: 55px;
+}
+
+.page-node-19 .titulo-agenda:nth-child(odd) {
+    padding-top: 16px;
+    background-color: rgba(164, 29, 52,0.1);
+    padding-bottom: 16px;
+    margin-bottom: 10px;
+}
+
+/*VISTA CONTACTO*/
+.page-node-19 .pane-vista-contacto-ambiente{
+margin-top: 55px;
+}
+
+.page-node-19 .pane-vista-contacto-ambiente h2{
+/*FALTA FAJA DE CONTACTO DE GESTION*/
+    background-image: url("../images/ambiente-vidaestudiantil-contacto.png");
+    background-repeat: no-repeat;
+    background-size: 148px 38px;
+    text-indent: -9000px;
+    height: 38px;
+    background-position-x: 13px;
+    margin-bottom: 30px;
+}
+
+
+/*FIN AMBIENTE*/
+
+
+/*****************************************************/
+/********* VISTA AMBIENTE CIENCIA Y TECNOLOGIA ************/
+/*****************************************************/
+
+/*SLIDER NOTICIAS*/
+.page-node-16 .pane-vista-slider-noticias h2{
+background-image: url("../images/ambiente-cyt-nombre.png");
+background-repeat: no-repeat;
+background-size: 352px 80px;
+text-indent: -9000px;
+height: 80px;
+background-position-x: 115px;
+margin-bottom: 15px;
+/*el color es #00758b*/
+background-color: rgba(0, 117, 139,0.15);
+background-position-y: 5px;
+}
+
+.page-node-16 .field-content.unc-slider{
+background-color: rgba(0, 117, 139,0.8);
+background-image: url("../images/icono_titular.png");
+}
+
+.page-node-16 .field-content.unc-slider a {
+color: #FFFFFF;
+}
+
+/*TIRA DE BANNERS*/
+.page-node-16 .pane-vista-tira-banners{
+margin-bottom: 50px;
+margin-top: 20px;
+}
+
+
+/*VISTA NOVEVDADES*/
+.page-node-16 .pane-vista-novedades h2{
+    background-image: url("../images/ambiente-cyt-ultimas-noticias.png");
+    background-repeat: no-repeat;
+    background-size: 284px 38px;
+    text-indent: -9000px;
+    height: 38px;
+    background-position-x: 100px;
+    margin-bottom: 30px;
+}
+
+.page-node-16 .view-id-vista_novedades ul {
+    padding-left: 0px;
+}
+
+.page-node-16 .view-id-vista_novedades li {
+    background-color: rgba(0, 117, 139,0.1);
+    list-style: none;
+    margin-bottom: 15px;
+    line-height: 50px;
+}
+
+.page-node-16 .view-id-vista_novedades li a {
+    vertical-align: middle;
+    margin-left: 10px;
+    color: #222222;
+}
+
+.page-node-16 .view-id-vista_novedades li:hover {
+    background-color: rgba(0, 117, 139,0.2);
+}
+
+.page-node-16 .view-id-vista_novedades li a:hover {
+    vertical-align: middle;
+    margin-left: 10px;
+    color: #0071b4;
+    text-decoration: none;
+}
+
+
+/*VISTA VIDEOS*/
+.page-node-16 .pane-vista-videos .view-id-vista_videos{
+    margin-top: 88px;
+}
+
+/* VISTA MULTIMEDIA*/
+.page-node-16 .pane-vista-multimedia-ambiente{
+margin-top: 55px;
+}
+
+
+/*VISTA AGENDA*/
+.page-node-16 .pane-vista-eventos{
+margin-top: 55px;
+}
+
+.page-node-16 .titulo-agenda:nth-child(odd) {
+    padding-top: 16px;
+    background-color: rgba(0, 117, 139,0.1);
+    padding-bottom: 16px;
+    margin-bottom: 10px;
+}
+
+/*VISTA CONTACTO*/
+.page-node-16 .pane-vista-contacto-ambiente{
+margin-top: 55px;
+}
+
+.page-node-16 .pane-vista-contacto-ambiente h2{
+/*FALTA FAJA DE CONTACTO DE GESTION*/
+    background-image: url("../images/ambiente-cyt-contacto.png");
+    background-repeat: no-repeat;
+    background-size: 148px 38px;
+    text-indent: -9000px;
+    height: 38px;
+    background-position-x: 13px;
+    margin-bottom: 30px;
+}
 
 
 /*FIN AMBIENTE*/
