--- a/sites/all/modules/panels_bootstrap_layouts/plugins/layouts/bootstrap_unc_ambiente/panels-bootstrap-layouts-admin-unc.css
+++ b/sites/all/modules/panels_bootstrap_layouts/plugins/layouts/bootstrap_unc_ambiente/panels-bootstrap-layouts-admin-unc.css
@@ -10,6 +10,7 @@
   margin-left: 1%;
   margin-bottom: 1%;
 }
+.panels-dnd .bootstrap-unc-ambiente #panel-region-menus {width: 98.0%;}
 .panels-dnd .bootstrap-unc-ambiente #panel-region-links_administrativos {width: 48.0%;}
 .panels-dnd .bootstrap-unc-ambiente #panel-region-gente_grupo {width: 48.0%;}
 
