--- a/sites/all/themes/unc/css/unc.css
+++ b/sites/all/themes/unc/css/unc.css
@@ -473,12 +473,34 @@ width: 170px;
 
 /*----------PERFILES------------*/
 /*margen comun para todos los perfiles*/
+.page-taxonomy-term-1 h1.page-header{/*estudiantes*/
+    display:none;
+}
+.page-taxonomy-term-9 h1.page-header{/*comunidad*/
+    display:none;
+}
+.page-taxonomy-term-4 h1.page-header{/*docentes*/
+    display:none;
+}
+.page-taxonomy-term-8 h1.page-header{/*extranjeros*/
+    display:none;
+}
+.page-taxonomy-term-6 h1.page-header{/*graduados*/
+    display:none;
+}
+.page-taxonomy-term-7 h1.page-header{/*ingresantes*/
+    display:none;
+}
+.page-taxonomy-term-5 h1.page-header{/*nodocentes*/
+    display:none;
+}
+
 .view.view-vista-cintas-desplegables.view-id-vista_cintas_desplegables.view-display-id-default{
     margin-bottom: 37px;
 }
 
 /*estudiantes = term 1*/
-.page-taxonomy-term-1 h1.page-header{
+.page-taxonomy-term-1 h1.page-header-perfil{
     background-position-x: 95px;
     background-position-y: 15px;
     background-color:rgba(173, 36, 43,0.1);/*#AD242B con 10% de opacidad*/
@@ -548,6 +570,76 @@ width: 170px;
     
 }
 
+/*ingresantes = term 7*/
+.page-taxonomy-term-7 h1.page-header-perfil{
+    background-position-x: 95px;
+    background-position-y: 15px;
+    background-color:rgba(167, 85, 14,0.1);/*#a7550e con 10% de opacidad*/
+    background-image:url(../images/perfil_ingresantes.png);
+    background-repeat:no-repeat;
+    background-size:447px 45px;
+    text-indent:-9999px;
+    height:60px;
+    margin-bottom: 10px;
+}
+
+.page-taxonomy-term-7 .field-content.unc-slider {
+    background-color:rgba(167, 85, 14,0.9);/*#a7550e con 10% de opacidad*/
+    background-image: url("../images/cv-titulo.svg");
+}
+
+.page-taxonomy-term-7 .field-content.unc-slider a {
+    color:#ffffff;
+}
+
+.page-taxonomy-term-7 .pane-vista-cintas-desplegables .panel-default .panel-heading {
+    background-color:rgba(167, 85, 14,0.1);/*#a7550e con 10% de opacidad*/
+    height:43px;
+    border:0px solid;
+    border-top-left-radius:0px;
+    border-top-right-radius:0px;
+}
+
+.page-taxonomy-term-7 .pane-vista-cintas-desplegables .panel-group .panel{
+    border-radius: 0;
+    border: 0px solid;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    margin-bottom: 10px;
+}
+
+.page-taxonomy-term-7 .flex-control-paging li a.flex-active {
+    background: rgba(167, 85, 14,0.1); /*#a7550e con 10% de opacidad*/
+}
+.page-taxonomy-term-7 .flex-control-paging li a:hover{
+    background: rgba(167, 85, 14,0.1); /*#a7550e con 10% de opacidad*/
+}
+.page-taxonomy-term-7 .flex-control-paging li a{
+    background: #BEBDBE;
+    width: 10px;
+    height: 10px;
+}
+
+.page-taxonomy-term-7 .view-id-vista_novedades li.views-row{
+    background-color: #dddcdc;
+    list-style: none;
+    margin-bottom: 15px;
+    line-height: 50px;
+}
+
+.page-taxonomy-term-7 .view-id-vista_novedades li.views-row:hover {
+    background-color: rgba(167, 85, 14,0.1);/*#a7550e con 10% de opacidad*/;
+}
+
+.page-taxonomy-term-7 .view-id-vista_novedades li.views-row a{
+    width: 100%;
+}
+
+.page-taxonomy-term-7 .view-id-vista_novedades li.views-row a:hover{
+    color:#a7550e;
+    
+}
 
 /*****************************************************/
 /********* VISTA AMBIENTE INTERNACIONALES ************/
